fix: corrigindo os testes de estabelecimento